# vektor

./: Dockerfile  Makefile  README.md  compile_flags.txt  decision_engine_test  docker-compose.yml  go.mod  markov_chain_test  ring_buffer_test  trace.csv
benchmarks/results/: 1773991171.json  1773991468.json
benchmarks/traces/: generate.go
cmd/bench/: main.go
cmd/coordinator/: main.go
cmd/proxy/: main.go
configs/: vektor.yaml
decision_engine_test.dSYM/Contents/: Info.plist
decision_engine_test.dSYM/Contents/Resources/DWARF/: decision_engine_test
docs/: prediction-model-research.md
engine/: CMakeLists.txt
engine/include/: decision_engine.h  engine.h  markov_chain.h  ring_buffer.h
engine/src/: decision_engine.cpp  engine.cpp  markov_chain.cpp  ring_buffer.cpp
engine/tests/: decision_engine_test.cpp  markov_chain_test.cpp  ring_buffer_test.cpp
internal/backend/: redis_adapter.go  redis_adapter_test.go  store.go
internal/bench/: latency.go  replayer.go
internal/cgobridge/: bridge.go  bridge_test.go  engine.go
internal/coordinator/: coordinator.go
internal/coordinator/policy/: policy.go
internal/coordinator/tracker/: tracker.go
internal/coordinator/worker/: pool.go
internal/events/: event.go
internal/grpc/: server.go
internal/proxy/: server.go  server_test.go
internal/proxy/resp/: parser.go  parser_test.go  writer.go
internal/proxy/router/: router.go
markov_chain_test.dSYM/Contents/Resources/DWARF/: markov_chain_test
proto/: vektor.pb.go  vektor.proto  vektor_grpc.pb.go
(+4 files in other folders)
